fixtures/go/fallback/should_fail/hidden_payload.go
package api

type toolUsePayload struct{}

func RenderToolUse(payload toolUsePayload) toolUsePayload {
	return payload
}
